--- a/case-studies.tex
+++ b/case-studies.tex
@@ -15,7 +15,7 @@ The B\`ord officially is tasked with promoting and facilitating educational mate
 
 \subsubsection{Language Vitality Status}
 
-Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 GLS Act.\footnote{\href{https://www.ethnologue.com/language/gla}{https://www.ethnologue.com/language/gla. Last accessed April~27, 2018.}}  \citet{lewis2009ethnologue} notes regarding language use that "Resurgence of interest in Scottish Gaelic in 1990s. A number of children learn the language but there are serious problems in language maintenance even in the core areas \citep{salminen2007endangered}. Home, church, community." UNESCO judges it to be {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html. Last accessed April~27, 2018.}} The Endangered Languages Project describes it as Threatened or Vulnerable, depending on the source,\footnote{\href{http://endangeredlanguages.com/lang/3049}{http://endangeredlanguages.com/lang/3049. Last accessed April~27, 2018.}} as \citet{salminen2007europe} gives a much smaller population number of 20k for speakers than the other census-based data. \citet{kornai2013digital}'s rating declares it as {\it Living}.\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}}
+Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 GLS Act.\footnote{\href{https://www.ethnologue.com/language/gla}{https://www.ethnologue.com/language/gla. Last accessed April~27, 2018.}}  \citet{lewis2009ethnologue} notes regarding language use that "Resurgence of interest in Scottish Gaelic in 1990s. A number of children learn the language but there are serious problems in language maintenance even in the core areas \citep{salminen2007endangered}. Home, church, community." UNESCO judges it to be {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html. Last accessed April~27, 2018.}} The Endangered Languages Project describes it as Threatened or Vulnerable, depending on the source,\footnote{\href{http://endangeredlanguages.com/lang/3049}{http://endangeredlanguages.com/lang/3049. Last accessed April~27, 2018.}} as \citet{salminen2007europe} gives a much smaller population number of 20k for speakers than the other census-based data. \citepos{kornai2013digital} rating declares it as {\it Living}.\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}}
 
 \subsubsection{Language Resources}
 \label{subsec:gaelic-resources}
@@ -59,9 +59,9 @@ All of the Naskapi speak their own language regularly, in all contexts - excepti
 \subsubsection{Language Vitality Status}
 \label{sec:naskapi-vitality-status}.
 
-\citet{lewis2009ethnologue} classifies Naskapi as Level 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk . Last accessed April~27, 2018.}} UNESCO defines it as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html. Last accessed April~27, 2018.}} \citet{kornai2013digital}'s digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651. Last accessed April~27, 2018.}} Naskapi does not appear at all on the Endangered Languages Project.
+\citet{lewis2009ethnologue} classifies Naskapi as Level 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk . Last accessed April~27, 2018.}} UNESCO defines it as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html. Last accessed April~27, 2018.}} \citepos{kornai2013digital} digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651. Last accessed April~27, 2018.}} Naskapi does not appear at all on the Endangered Languages Project.
 
-The {\it dead} terminology used to describe Naskapi by \citet{kornai2013digital}'s metric reflects the metric's being only applied to online corpora (which is minimal), and, regardless of the insensitivity of the nomenclature, it does have some merit here. When looking at the resources listed on the resource, there are no language packs for software, no Wikipedia articles, no Hunspell, no primary texts listed in OLAC, only 2415 words listed in the Cr\'ubad\'an corpus, no Indigenous tweets, no Swadesh lists, and only a brief mention in Panlex translations (90 words), and in Omniglot. Once again the data may not be perfect - this source lists the EGIDS rating at Level 5 (which I would disagree with, placing it in back in Level 4, as "The language is in vigorous use, with standardisation and literature being sustained through a widespread system of institutionally supported education.")
+The {\it dead} terminology used to describe Naskapi by \citepos{kornai2013digital} metric reflects the metric's being only applied to online corpora (which is minimal), and, regardless of the insensitivity of the nomenclature, it does have some merit here. When looking at the resources listed on the resource, there are no language packs for software, no Wikipedia articles, no Hunspell, no primary texts listed in OLAC, only 2415 words listed in the Cr\'ubad\'an corpus, no Indigenous tweets, no Swadesh lists, and only a brief mention in Panlex translations (90 words), and in Omniglot. Once again the data may not be perfect - this source lists the EGIDS rating at Level 5 (which I would disagree with, placing it in back in Level 4, as "The language is in vigorous use, with standardisation and literature being sustained through a widespread system of institutionally supported education.")
 
 ODIN has exactly one IGT entry for Naskapi, from \citep{richards2004syntax}. This means that noting the translation in Example~\ref{igt1} may may double the size of ODIN's entries, although it is not the first entry in the literature (this lexeme is mentioned in \citet{macKenzie1980towards}).\footnote{This might also be transliterated as `wabush`, although it would not match the Naskapi phonological inventory. Wabush is the name of a town in Labrador, which I was told meant `hare' or `rabbit', and my pronunciation was not corrected.}
 
