--- a/floss.tex
+++ b/floss.tex
@@ -86,7 +86,7 @@ Today, however, there is a sea change towards putting computational work in the 
 \subsection{Digital permanence and storage}
 \label{subsec:digital-permanence}
 
-Focusing a bit closer on the academic use case, we can easily imagine a case where a professor puts code related to research on a university server, only to see that server change hands, go offline, or become defunct if the professor leaves the university for a position elsewhere or if their focus changes. This is more true of grad students, who don't have the same locational longevity as staff. As mentioned briefly above, this can lead to link rot; links which formerly pointed to workable software may then point nowhere or to the wrong resource. Links can also be improperly shared; for instance, some websites may have improper subdomain settings leading to an inability for the website to resolve if not typed specifically.\footnote{For example, {\tt resourcebook.eu/searchll.php} does not resolve, but {\tt http://www.resourcebook.eu/searchll.php} does. This lead my to believe that \citet{calzolari2012lre}'s website was down for several weeks.}
+Focusing a bit closer on the academic use case, we can easily imagine a case where a professor puts code related to research on a university server, only to see that server change hands, go offline, or become defunct if the professor leaves the university for a position elsewhere or if their focus changes. This is more true of grad students, who don't have the same locational longevity as staff. As mentioned briefly above, this can lead to link rot; links which formerly pointed to workable software may then point nowhere or to the wrong resource. Links can also be improperly shared; for instance, some websites may have improper subdomain settings leading to an inability for the website to resolve if not typed specifically.\footnote{For example, {\tt resourcebook.eu/searchll.php} does not resolve, but {\tt http://www.resourcebook.eu/searchll.php} does. This lead me to mistakenly believe that \citepos{calzolari2012lre} website was down for several weeks.}
 
 These are artefacts of systemic defects; in a location-based protocol (such as the Hypertext Transfer Protocol (http) protocol used by most websites today), consistency of location is prioritised over consistency of content. If the content was pointed to using some more permanent reference, such as a DOI, than the object could be moved without issues, and the problem of link rot is largely solved.
 
