--- a/thesis.tex
+++ b/thesis.tex
@@ -118,7 +118,9 @@ Where it was more efficient to refer to a website as a footnote, I have done so;
 
 \newpage
 \thispagestyle{empty}
+\setcounter{page}{0}
 \listoffigures
+\setcounter{page}{0}
 \listoftables
 %\listoflistings % For code; not needed here.
 \thispagestyle{empty}
@@ -168,26 +170,7 @@ Where it was more efficient to refer to a website as a footnote, I have done so;
 % \subsection{Storage on a p2p network}
 \include{conclusion}
 
-% % \input{background}
-% % \input{definition}
-% % \input{composition}
-% % \input{discussion}
-% % \input{conclusion}
-
-% Used by Jonathan, may not be needed
-% \newpage
-% \appendix
-% \input{appendix}
-
 \newpage
-
-% The LREC method
-% \section{References}
-% \label{main:ref}
-% \bibliographystyle{./LREC2016/lrec2016}
-% \bibliography{references}
-
-% TODO Add a conflicts section?
 
 \bibliographystyle{apalike-refs}
 \bibliography{references}
