Add last accessed to all URLs

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 \section{Introduction}
 \label{sec:intro}
 
-At least half of the world's 7000-odd languages will be extinct this century \citep{krauss92, grenoble2011cambridge}. Just over half of these languages have writing systems.\footnote{\href{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0. Last accessed May~1, 2015.}{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0. \last{May 1}}} It is estimated that less than 5\% of the world's languages are used online or have significant digital presence \citep{kornai2013digital}.
+At least half of the world's 7000-odd languages will be extinct this century \citep{krauss92, grenoble2011cambridge}. Just over half of these languages have writing systems.\footnote{\href{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}. \last{May 1}} It is estimated that less than 5\% of the world's languages are used online or have significant digital presence \citep{kornai2013digital}.
 
 The majority of the world's computational technology has been built by English, with English manuals, English interfaces, and by English speakers. The most prevalent language spoken by users of this technology is also English. There are a few languages - around thirty - with the combination of large populations with internet access, official governmental status, and industrial economies which affords them some native computational technology, in particular on the World Wide Web, the largest global network for sharing code and written material.
 
