--- a/references.bib
+++ b/references.bib
@@ -243,7 +243,7 @@ publisher={Blackwell}
   address={London},
   publisher={SOAS, Endangered Languages Archive},
   url={http://elar.soas.ac.uk/deposit/0056},
-  note={Last accessed on April 26, 2018.}
+  note={\last{April~26}}
 }
 
 @article{caballero2017choguita,
@@ -1745,7 +1745,7 @@ title = {Directory International cooperation programs for the protection and pro
 
 
 @misc{wiki:Wikipedia,
-  author ={Wikipedia contributors},
+  author ={{Wikipedia contributors}},
   title ={Wikipedia --- {W}ikipedia{,} The Free Encyclopedia},
   year = "2018",
   url = {https://en.wikipedia.org/wiki/Wikipedia},
