--- a/thesis.tex
+++ b/thesis.tex
@@ -105,7 +105,7 @@ This thesis is based loosely on a paper presented at the LREC CCURL Workshop in 
 
 This work also draws heavily on an open source repository on GitHub, for which Gina Chiodo, Hugh Paterson III, Liling Tan, Ryan Txanson, Robert Forkel, Aidan Pine, Nick Heindl, Kevin Scannell, Sjur Moshagen, Waldir Pimenta, Joshua Olson, Edwin Ko, Arne Neumann, and Pablo Duboue are all contributors (in order of contributions) as of today, as well as the bots ReadmeCritic, greenkeeper[bot] (run by my friend, Gregor Martynus), and orthographic-pedant (run by Travis Hoppe).
 
-Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/. Last accessed May~1, 2018.}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/. Last accessed May~1, 2018.}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/. Last accessed May~1, 2018.}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/. Last accessed May~1, 2018.}}; Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/. Last accessed May~1, 2018.}}; Bash\footnote{\href{https://www.gnu.org/software/bash/}{https://www.gnu.org/software/bash/. Last accessed May~1, 2018.}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/. Last accessed May~1, 2018.}}; among a suite of other closed and open source tools.
+Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/}. \last{May~1}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/}. \last{May~1}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/}. \last{May~1}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/}. \last{May~1}}; Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/}. \last{May~1}}; Bash\footnote{\href{https://www.gnu.org/software/bash/}{https://www.gnu.org/software/bash/}. \last{May~1}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/}. \last{May~1}}; among a suite of other closed and open source tools.
 
 Where it was more efficient to refer to a website as a footnote, I have done so; some of the resources thus acknowledged may have a publication that I also could have referred to. I have had to date no proofreaders for this paper, so all errors are mine and mine alone. My apologies.
 
